vertical align issue fix

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -820,7 +820,7 @@ aside {
 .close-batch-btn {
   text-align: right;
   margin-top: 20px;
-  margin-right: 40px;
+  margin-right: 18px;
   margin-bottom: 25px;
 
   button:hover {
@@ -1283,8 +1283,8 @@ height: 28px;
     @include button-animation;
     svg {
       vertical-align: unset;
-      width: 13px;
-      height: 13px;
+      width: 12px;
+      height: 12px;
       margin-right: 5px;
     }
   }
@@ -1996,3 +1996,11 @@ body .ui-inputtext {
 
 
 
+.modal-batch-register-buttons .svg-center {
+  vertical-align: middle;
+}
+
+
+.register-popup-full {
+  max-width: 100% !important;
+}
